--- a/page/_layout/nav.html
+++ b/page/_layout/nav.html
@@ -2,9 +2,9 @@
   <div class="container">
     <span class="navbar-brand">
       {{if add_nav_logo}}
-        <img src="{{nav_logo_path}}" class="img-fluid" style="{{nav_logo_style}}" alt="{{nav_logo_alt}}"/>
+        <a href="#page-top"><img src="{{nav_logo_path}}" class="img-fluid" style="{{nav_logo_style}}" alt="{{nav_logo_alt}}"/></a>
       {{end}}
-      <a href="#page-top">{{title}}</a>
+      <!--<a href="#page-top">{{title}}</a>-->
       {{if add_docs}}
       ｜ <a href="{{docs_url}}" target="_blank">{{docs_name}}</a>
       {{end}}
