--- a/page/_layout/head.html
+++ b/page/_layout/head.html
@@ -5,8 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="{{authors}}">
+  <meta name="description" content="{{description}}">
   <title>{{title}}</title>
 
+  <meta property="og:description" content="{{description}}" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/julia-users-helsinki/julia-users-helsinki.github.io/main/page/_assets/juh-og.png"/>
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="160" />
+
+  <!-- google thumbnail -->
+  <meta name="thumbnail" content="https://raw.githubusercontent.com/julia-users-helsinki/julia-users-helsinki.github.io/main/page/_assets/juh-og.png"/>
+  
   <link rel="icon" type="image/png"  href="/assets/favicon.ico">
 
   <!-- CSS -->
